CVS Code -
- Ran source through indent -kr again.  Make everything pretty.
- Added "replace with null" option.  ^N in replace.  New alias
  NANO_NULL_KEY, and code in do_replace to check for it.  Readded
  NANO_NULL_KEY case to search_init code.
- global.c
  toggle_init()
	- Added #ifdef around toggle_regex_msg to get rid of compiler 
	  warning.
- search.c
  findnexstr()
	- New arg for begin_x variable, basically a rewrite that
	  makes a little more sense and isn't quite as messy (Rocco Corsi).
	- Update the line we're checking if not the whole screen, because
	  it's quite possible the search team could exist somewhere way
	  to the right on the same line, for example.
  replace_abort()
	- Add reset of placewewant, stops cursor from jumping when moving
	  cursor after a replace.
  do_replace()
	- Added code for Gotoline key after entering the search term.
	  Fixes bug #46.
	- Removed redundant code involving processing replacemenet string.
	  Converted if statements to switch statements.
	- Optimizations by Rocco Corsi.
  do_search()
	- Converted if statements to one switch statement.
- winio.c
  nanogetstr()
	- Added check for 343 in while loop to get rid of getting "locked"
	  into statusbar" bug in odd $TERMs like iris-ansi.
  nanoget_repaint()
	- New function, removes about 30 lines of duplicate code in 
	  nanogetstr().
- es.po:
	- Translated new NULL replace strings. (Jordi Mallach)
  
nano 0.9.19 - 10/02/2000
- General
	- Added PDCurses support under cygwin, which allows building
	  a nice stand-alone nano.exe for those poor Windows users.
	  Extra check in configure.in for initscr() in -lcurses (as
	  PDcurses has no tgetent), some #ifdef PDCURSES statements
	  in main().
	- Changed web site and email to new nano-editor.org domain.
- nano.c
	- Added (int) casts to remove compile warnings with -Wall.
  main()
	- Added check for _POSIX_VDISABLE around term variable definition.
- search.c