@@ -209,30 +209,28 @@ Usage: nano [option] +LINE <file>\n\
   {"Replaced %d occurences", 176},
   {"Replaced 1 occurence", 177},
   {"Replace Cancelled", 178},
-  {"Nothing Happens", 179},
-  {"Replace with [%s]", 180},
-  {"Replace with", 181},
-  {"Replace this instance?", 182},
-  {"Enter line number", 183},
-  {"Aborted", 184},
-  {"Come on, be reasonable", 185},
-  {"Only %d lines available, skipping to last line", 186},
-  {"actual_x_from_start for xplus=%d returned %d\n", 187},
-  {"input '%c' (%d)\n", 188},
-  {"New Buffer", 189},
-  {"  File: ...", 190},
-  {"Modified", 191},
-  {"Moved to (%d, %d) in edit buffer\n", 192},
-  {"current->data = \"%s\"\n", 193},
-  {"I got \"%s\"\n", 194},
-  {"Yes", 195},
-  {"All", 196},
-  {"No", 197},
-  {"do_cursorpos: linepct = %f, bytepct = %f\n", 198},
-  {"line %d of %d (%.0f%%), character %d of %d (%.0f%%)", 199},
-  {"Dumping file buffer to stderr...\n", 200},
-  {"Dumping cutbuffer to stderr...\n", 201},
-  {"Dumping a buffer to stderr...\n", 202},
+  {"Replace with", 179},
+  {"Replace this instance?", 180},
+  {"Enter line number", 181},
+  {"Aborted", 182},
+  {"Come on, be reasonable", 183},
+  {"Only %d lines available, skipping to last line", 184},
+  {"actual_x_from_start for xplus=%d returned %d\n", 185},
+  {"input '%c' (%d)\n", 186},
+  {"New Buffer", 187},
+  {"  File: ...", 188},
+  {"Modified", 189},
+  {"Moved to (%d, %d) in edit buffer\n", 190},
+  {"current->data = \"%s\"\n", 191},
+  {"I got \"%s\"\n", 192},
+  {"Yes", 193},
+  {"All", 194},
+  {"No", 195},
+  {"do_cursorpos: linepct = %f, bytepct = %f\n", 196},
+  {"line %d of %d (%.0f%%), character %d of %d (%.0f%%)", 197},
+  {"Dumping file buffer to stderr...\n", 198},
+  {"Dumping cutbuffer to stderr...\n", 199},
+  {"Dumping a buffer to stderr...\n", 200},
 };
 
-int _msg_tbl_length = 202;
+int _msg_tbl_length = 200;
