@@ -395,7 +395,10 @@ int nanogetstr(char *buf, char *def, shortcut s[], int slen, int start_x)
 
     strncpy(answer, inputbuf, 132);
 
-    if (!strcmp(answer, ""))
+    /* Now that the text is editable instead of bracketed, we have to 
+       check for answer == def, instead of answer == "" */
+/*    if (!strcmp(answer, "")) */
+    if (!strcmp(answer, def))
 	return -2;
     else
 	return 0;
